# delete-old-posts-at-bsky

./: README.md  main.py  pyproject.toml  script.sh
