[tool.poetry]
name = "delete-old-posts-at-bsky"
version = "0.1.0"
description = ""
authors = ["pypypyo14 <jkmr9214@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.1,<3.13"
atproto = "^0.0.37"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
black = "^23.12.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true
